
0.0000: Wed May 28 2014
   - got a SIGINT handler working reliably and correctly (by copying an example
     in the Term::ReadLine::Gnu distribution)
   - I think I now definitely require the ::Gnu version of ReadLine though …
   - there, test for some things so we work under ::Perl

0.0000: Sat May 26 2014
   - did boatloads of work on the parser (all week actualy)

0.0000: Sat May 17 2014
   - restructure the messaging system
   - built a really basic parser (with lots of fur and bugs)

0.0000: Sat May 17 2014
   - trying to get my thoughts together
   - wrote the very first shell loop
   - made a parser that loads commands (but doesn't parse anything, yet)