@@ -1,9 +1,12 @@
 
 0.0000: Wed May 28 2014
    - got a SIGINT handler working reliably and correctly (by copying an example
-     in the Term::ReadLine::Gnu distribution)
+     in the Term::ReadLine::Gnu distribution — actually started with
+     AnyEvent::ReadLine::Gnu, but it's actually *less* clear)
    - I think I now definitely require the ::Gnu version of ReadLine though …
    - there, test for some things so we work under ::Perl
+   - figured out how to actually do the tab completion from the example in ::Gnu/eg/perlsh
+     [it's not obvious like you'd think]
 
 0.0000: Sat May 26 2014
    - did boatloads of work on the parser (all week actualy)
